<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rootBackgroundColor"
    android:orientation="vertical">

    <TextView style="@style/mainHeading" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/editText"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextE"
        style="@style/editText"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextPass"
        style="@style/editText"
        android:hint="@string/password" />

    <Button
        style="@style/button"
        android:onClick="createAccount"
        android:text="@string/createAccount" />

    <TextView
        style="@style/signUpToLoginNavigator"
        android:onClick="backToLogin"
        android:text="@string/loginNavigator" />


</LinearLayout>
